crates/nirvash-macros/tests/fixtures/code_tests_legacy_action.stderr
error: action = ... is no longer supported; declare Runtime, Context, fresh_runtime(), and context() on CodeConformanceSpec
   --> tests/fixtures/code_tests_legacy_action.rs:107:49
    |
107 | #[code_tests(spec = Spec, init = initial_state, action = Action)]
    |                                                 ^^^^^^
